[package]
name = "grab"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive", "string"] }
clap-verbosity-flag = "2.2.0"
dialoguer = "0.11.0"
env_logger = "0.11.3"
eyre = "0.6.12"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
shlex = "1.3.0"
which = "6.0.0"
