[project]
name = "grab"
version = "1.1.5"
description = "A stupidly simple paste system."
authors = [{ name = "frosty", email = "inthishouseofcards@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["click>=8.1.7", "PyYAML>=6.0.1", "pyperclip>=1.8.2"]

[project.scripts]
grab = "grab.__main__:cli"

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle Error
    "W",   # pycodestyle Warning
    "I",   # isort
    "N",   # pep8-naming
    "Q",   # flake8-quotes
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
]
fixable = ["ALL"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
